[gd_scene load_steps=6 format=3 uid="uid://cv7jre8rppoli"]

[ext_resource type="Script" uid="uid://4vxvmd16aeo1" path="res://scenes/game.gd" id="1_lbhrr"]
[ext_resource type="PackedScene" uid="uid://qfhrp6f852ur" path="res://scenes/boundary.tscn" id="1_lnu2h"]
[ext_resource type="PackedScene" uid="uid://dghd7rii024ea" path="res://scenes/player.tscn" id="2_lnu2h"]
[ext_resource type="PackedScene" uid="uid://bx2rg78cu21y2" path="res://scenes/tree.tscn" id="3_lnu2h"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iywne"]
size = Vector2(381, 194)

[node name="game" type="Node2D"]
script = ExtResource("1_lbhrr")

[node name="finish_area" type="Area2D" parent="."]
position = Vector2(-14, -197)

[node name="CollisionShape2D" type="CollisionShape2D" parent="finish_area"]
position = Vector2(13.5, -28)
shape = SubResource("RectangleShape2D_iywne")

[node name="car_timer" type="Node2D" parent="."]

[node name="Timer" type="Timer" parent="car_timer"]
autostart = true

[node name="objects" type="Node" parent="."]

[node name="background" parent="objects" instance=ExtResource("1_lnu2h")]

[node name="player" parent="objects" instance=ExtResource("2_lnu2h")]
position = Vector2(34, 57)

[node name="tree" parent="objects" instance=ExtResource("3_lnu2h")]
position = Vector2(81, 31)

[node name="car_start_position" type="Node" parent="."]

[node name="Marker2D" type="Marker2D" parent="car_start_position"]
position = Vector2(201, -113)

[node name="Marker2D2" type="Marker2D" parent="car_start_position"]
position = Vector2(-212, -93)

[node name="Marker2D3" type="Marker2D" parent="car_start_position"]
position = Vector2(207, -45)

[node name="Marker2D4" type="Marker2D" parent="car_start_position"]
position = Vector2(-206, -23)

[node name="Marker2D5" type="Marker2D" parent="car_start_position"]
position = Vector2(199, 8)

[node name="Marker2D6" type="Marker2D" parent="car_start_position"]
position = Vector2(-212, 100)

[node name="Marker2D7" type="Marker2D" parent="car_start_position"]
position = Vector2(-211, 148)

[node name="Marker2D8" type="Marker2D" parent="car_start_position"]
position = Vector2(207, 117)

[node name="Marker2D9" type="Marker2D" parent="car_start_position"]
position = Vector2(196, 171)

[connection signal="area_entered" from="finish_area" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="finish_area" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="car_timer/Timer" to="." method="_on_timer_timeout"]
